--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,4 @@ jobs:
         run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/dockerhub1
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/dockererhub1
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/dockerhub1
