--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/dockerhub1
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/docker1098
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/dockerhub1
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/docker1098
