--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,19 @@ jobs:
       - name: Docker Push 
         run: docker push ${{ secrets.DOCKER_USERNAME }}/docker1098:1
 
+       - name: Login to EC2
+      uses: aws-actions/connect-to-ec2@v1
+      with:
+        instance-ids: i-0c7334250f0d833fa
+        
+    - name: Install Docker node module
+      run: sudo yum install docker
+
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            
+    - name: Pull Docker image 
+      run: docker pull msdhoni:latest
+
+    - name: Run Docker container
+      run: docker run -d -p 4500:4500 msdhoni:latest
