--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Docker Push 
         run: docker push ${{ secrets.DOCKER_USERNAME }}/docker1098:1
 
-       - name: Login to EC2
+       - name: Login to EC2 
       uses: aws-actions/connect-to-ec2@v1
-      with:
-        instance-ids: i-0c7334250f0d833fa
         
     - name: Install Docker node module
       run: sudo yum install docker
@@ -35,7 +33,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             
     - name: Pull Docker image 
-      run: docker pull msdhoni:latest
+      run: docker pull omer07/dockerhub1098:1
 
     - name: Run Docker container
-      run: docker run -p 4500:4500 msdhoni:latest
+      run: docker run -p 4500:4500 omer07/docker1098:1
