--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
 
        - name: Login to EC2 
       uses: aws-actions/connect-to-ec2@v1
+       with:
+        instance-ids: i-0c7334250f0d833fa
         
     - name: Install Docker node module
       run: sudo yum install docker
@@ -33,7 +35,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             
     - name: Pull Docker image 
-      run: docker pull omer07/dockerhub1098:1
+      run: docker pull omer07/dockerhub1098
 
     - name: Run Docker container
-      run: docker run -p 4500:4500 omer07/docker1098:1
+      run: docker run -p 4500:4500 omer07/docker1098
