--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Login to Docker Hub
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             
-    - name: Pull Docker image 
-      run: docker pull omer07/dockerhub1098
+     - name: Pull Docker Image
+       run: docker pull $DOCKER_USERNAME/myapp:latest
 
-    - name: Run Docker container
-      run: docker run -p 4500:4500 omer07/docker1098
+     - name: Run Docker Container
+       run: docker run -p 80:80 $DOCKER_USERNAME/myapp:latest
