--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,19 +23,19 @@ jobs:
       - name: Docker Push 
         run: docker push ${{ secrets.DOCKER_USERNAME }}/docker1098:1
 
-       - name: Login to EC2 
-      uses: aws-actions/connect-to-ec2@v1
+      - name: Login to EC2 
+      uses: aws-actions/connect-to-ec2-user
        with:
         instance-ids: i-0c7334250f0d833fa
         
-    - name: Install Docker node module
-      run: sudo yum install docker
+      - name: Install Docker node module
+        run: sudo yum install docker
 
-    - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             
-     - name: Pull Docker Image
-       run: docker pull $DOCKER_USERNAME/myapp:latest
+      - name: Pull Docker Image
+       run: docker pull omer07/docker1098:1
 
-     - name: Run Docker Container
-       run: docker run -p 80:80 $DOCKER_USERNAME/myapp:latest
+      - name: Run Docker Container
+       run: docker run -p 4500:4500 omer07/docker1098:1
