--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,41 +1,74 @@
-name: Publish Docker Image to Docker Hub
+name: Deploy Node.js app
 
 on:
   push:
-    branches: ['main']
-
+    branches:
+      - main
+      
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/docker1098:1
-       
-      - name: Docker Push 
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/docker1098:1
-
-      - name: Login to EC2 
-      uses: aws-actions/connect-to-ec2-user
-       with:
-        instance-ids: i-0c7334250f0d833fa
+    - name: Create Node.js app
+      run: |
+        echo "console.log('Hello, World I Omer Abdullah From Swizerland  I am Coming On the way to India')" > app.js
+        npm init -y
+        npm install
         
-      - name: Install Docker node module
-        run: sudo yum install docker
+    - name: Create Dockerfile
+      run: |
+        echo "FROM node:alpine\COPY . .\CMD [\"node\", \"app.js\"]" > Dockerfile 
 
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            
-      - name: Pull Docker Image
-       run: docker pull omer07/docker1098:1
+    - name: Commit and push 
+      run: |
+        git config --global user.name 'Your Name'
+        git config --global user.email 'your@email.com'
+        git add .
+        git commit -m "Initial commit"
+        git push
+        
+    - name: Build and push image to Docker Hub
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+      run: |
+        docker build -t $DOCKER_USERNAME/nodeapp:latest .
+        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        docker push $DOCKER_USERNAME/nodeapp:latest
 
-      - name: Run Docker Container
-       run: docker run -p 4500:4500 omer07/docker1098:1
+    - name: Create EC2 instance
+      uses: aws-actions/configure-aws-credentials@v1
+      with: 
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2
+      run: |
+        aws ec2 run-instances --image-id ami-0abcdef1234567 --instance-type t2.micro --key-name mykey --security-groups my-sg
+        
+    - name: Connect to EC2 instance
+      uses: aws-actions/connect-to-ec2-user@v1
+      with:
+        instance-ids: ${{ steps.create-instance.outputs.instance-id }}
+
+    - name: Install Docker on EC2  
+      run: |
+        sudo yum update -y
+        sudo yum install docker -y
+        
+    - name: Login to Docker Hub on EC2
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}  
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        
+    - name: Pull image on EC2
+      run: docker pull $DOCKER_USERNAME/nodeapp:latest
+      
+    - name: Run container on EC2
+      run: docker run -d --name nodeapp $DOCKER_USERNAME/nodeapp:latest
