--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Deploy Node.js app
+name: Deploy Node.app.js
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Create Node.js app
+    - name: Create Node.app.js
       run: |
         echo "console.log('Hello, World I Omer Abdullah From Swizerland  I am Coming On the way to India')" > app.js
         npm init -y
