--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,9 +55,9 @@ jobs:
         sudo yum update -y
         sudo yum install docker -y
         
-      - name:Login to Docker Hub on EC2 
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}  
+      - name:Login to Docker Hub on EC2
+        env:|
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
