--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,16 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
     - name: Create Node.app.js
       run: |
-        echo "console.log('Hello, World I Omer Abdullah From Swizerland  I am Coming On the way to India')" > app.js
+        echo "console.log('Hello, World I Omer Abdullah From Switzerland I am Coming On the way to India')" > app.js
         npm install
         
     - name: Create Dockerfile
       run: |
-        echo "FROM node:alpine\COPY . .\CMD [\"node\", \"app.js\"]" > Dockerfile 
+        echo "FROM node:alpine\nCOPY . .\nCMD [\"node\", \"app.js\"]" > Dockerfile 
 
     - name: Commit and push 
       run: |
@@ -41,29 +42,26 @@ jobs:
         docker push $DOCKER_USERNAME/nodeapp:latest
 
     - name: Connect to EC2 instance
+      uses: aws-actions/connect-to-ec2-user@v1
       with:
-        uses: aws-actions/connect-to-ec2-user@v1
-
         instance-ids: ${{ steps.create-instance.outputs.i-0c7334250f0d833fa }}
-        with:
-    access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-
-     - name:Install Docker on EC2  
-       run:|
+    - name: Install Docker on EC2  
+      run: |
         sudo yum update -y
         sudo yum install docker -y
-        
-      - name:Login to Docker Hub on EC2
-        env:|
+
+    - name: Login to Docker Hub on EC2
+      env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-        
-    - name: Pull image on EC2
+
+    - name: Pull image on EC2 
       run: docker pull $DOCKER_USERNAME/nodeapp:latest
-      
+
     - name: Run container on EC2
       run: docker run -d --name nodeapp $DOCKER_USERNAME/nodeapp:latest
