--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,11 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Git
-        run: |
-          git config --global user.name 'Your Name'
-          git config --global user.email 'your@email.com'
-
       - name: Create Node.app.js
         run: |
           echo "console.log('Hello, World I Omer Abdullah From Switzerland I am Coming On the way to India')" > app.js
@@ -27,11 +22,17 @@ jobs:
         run: |
           echo "FROM node:alpine\nCOPY . .\nCMD [\"node\", \"app.js\"]" > Dockerfile
 
-      - name: Commit and Push Changes
+      - name: Commit Changes
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           git add .
-          git commit -m "Initial commit"
-          git push
+          git commit -m "Auto-commit changes"
+          
+      - name: Push Changes
+        uses: ad-m/github-push-action@master
+        with:
+          branch: main
 
       - name: Connect to EC2 instance
         run: |
