--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,17 +22,13 @@ jobs:
         run: |
           echo "FROM node:alpine\nCOPY . .\nCMD [\"node\", \"app.js\"]" > Dockerfile
 
-      - name: Commit Changes
+      - name: Commit and Push Changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
           git commit -m "Auto-commit changes"
-          
-      - name: Push Changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: main
+          git push origin main
 
       - name: Connect to EC2 instance
         run: |
