--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,12 +22,15 @@ jobs:
         run: |
           echo "FROM node:alpine\nCOPY . .\nCMD [\"node\", \"app.js\"]" > Dockerfile
 
-      - name: Commit and Push Changes
+      - name: Commit Changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
           git commit -m "Auto-commit changes"
+
+      - name: Push Changes
+        run: |
           git push origin main
 
       - name: Connect to EC2 instance
