--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Deploy Node.app.js
+name: Build and Push Docker Image
 
 on:
   push:
@@ -10,56 +10,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create Node.app.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Docker image
+        run: docker build -t your-dockerhub-username/docker1098:latest .
+
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push to Docker Hub
+        run: docker push your-dockerhub-username/docker1098:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Set up SSH connection to EC2 instance
+        uses: appleboy/ssh-action@master
+
+      - name: Pull Docker image from Docker Hub on EC2 instance
         run: |
-          echo "console.log('Hello, World I Omer Abdullah From Switzerland I am Coming On the way to India')" > app.js
-          npm install
+          docker login -u your-dockerhub-username -p ${{ secrets.DOCKER_PASSWORD }}
+          docker pull your-dockerhub-username/docker1098:latest
 
-      - name: Create Dockerfile
+      - name: Run Docker container on EC2 instance
         run: |
-          echo "FROM node:alpine\nCOPY . .\nCMD [\"node\", \"app.js\"]" > Dockerfile
-
-      - name: Commit Changes
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add .
-          git commit -m "Auto-commit changes"
-
-      - name: Push Changes
-        run: |
-          git push origin main
-
-      - name: Connect to EC2 instance
-        run: |
-          ssh-keyscan -H ${{ secrets.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/id_rsa
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_IP }} 'echo Successfully connected'
-
-      - name: Install Docker on EC2
-        run: |
-          sudo yum update -y 
-          sudo yum install docker -y
-
-      - name: Login to Docker Hub on EC2
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-
-      - name: Pull image on EC2
-        run: docker pull $DOCKER_USERNAME/nodeapp:latest
-
-      - name: Run container on EC2
-        run: docker run -d --name nodeapp $DOCKER_USERNAME/nodeapp
-
-      - name: My Step
-        run: |
-          set -x
-          # Your additional debugging commands here
-          echo "Debugging step: Hello from My Step"
-
+          docker run -d -p 4500:4500 your-dockerhub-username/docker1098:latestdockerhub-username/docker1098:latest
