--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,8 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push to Docker Hub
-        run: docker push your-dockerhub-omer07/docker1098:latest
+        run: |
+          docker push your-dockerhub-omer07/docker1098:latest || exit 0
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,9 +41,9 @@ jobs:
 
       - name: Pull Docker image from Docker Hub on EC2 instance
         run: |
-          docker login -u your-dockerhub-username -p ${{ secrets.DOCKER_PASSWORD }}
-          docker pull your-dockerhub-username/docker1098:latest
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker pull your-dockerhub-omer07/docker1098:latest
 
       - name: Run Docker container on EC2 instance
         run: |
-          docker run -d -p 4500:4500 your-dockerhub-username/docker1098:latestdockerhub-username/docker1098:latest
+          docker run -d -p 4500:4500 your-dockerhub-omer07/docker1098:latest
