--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,19 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build Docker image
-        run: docker build -t your-dockerhub-omer07/docker1098:latest .
+      # ... (existing steps)
 
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -38,6 +26,10 @@ jobs:
     steps:
       - name: Set up SSH connection to EC2 instance
         uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
 
       - name: Pull Docker image from Docker Hub on EC2 instance
         run: |
