--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,22 +33,30 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
-      - name: Set up SSH connection to EC2 instance
+      - name: Set up EC2 Instance Connect
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
+          port: 22
           debug: true
 
-      - name: Pull Docker image from Docker Hub on EC2 instance
+      - name: Install Docker on EC2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io
+
+      - name: Log in to Docker Hub on EC2
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Pull Docker image on EC2
+        run: |
           docker pull your-dockerhub-omer07/docker1098:latest
 
-      - name: Run Docker container on EC2 instance
+      - name: Run Docker container on EC2
         run: |
           docker run -d -p 4500:4500 your-dockerhub-omer07/docker1098:latest
