--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,8 +67,8 @@ jobs:
 
       - name: Pull Docker image on EC2
         run: |
-          docker pull your-dockerhub-omer07/docker1098:latest
+          docker pull your-dockerhub-omer07/docker1098:1
 
       - name: Run Docker container on EC2
         run: |
-          docker run -d -p 4500:4500 your-dockerhub-omer07/docker1098:latest
+          docker run -d -p 4500:4500 your-dockerhub-omer07/docker1098:1
