--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Pull Docker image on EC2
         run: |
-          docker pull your-dockerhub-omer07/docker1098:1
+          docker pull omer07/docker1098:1
 
       - name: Run Docker container on EC2
         run: |
