--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,14 +22,14 @@ jobs:
         run: npm install
 
       - name: Build Docker image
-        run: docker build -t your-dockerhub-omer07/docker1098:latest .
+        run: docker build -t your-dockerhub-omer07/dockerhub07:latest .
 
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push to Docker Hub
         run: |
-          docker push your-dockerhub-omer07/docker1098:latest || exit 0
+          docker push your-dockerhub-omer07/dockerhub07:latest || exit 0
   deploy:
     runs-on: ubuntu-latest
 
@@ -59,7 +59,7 @@ jobs:
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Pull Docker image on EC2
         run: |
-          docker pull omer07/docker1098:1
+          docker pull omer07/dockerhub07:1
       - name: Run Docker container on EC2
         run: |
-          docker run -d -p 4500:4500 --env EC2_PUBLIC_IP=18.188.226.16 omer07/docker1098:1
+          docker run -d -p 4500:4500 --env EC2_PUBLIC_IP=18.188.226.16 omer07/dockerhub07:1
