--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -62,4 +62,4 @@ jobs:
           docker pull omer07/dockerhub07:1
       - name: Run Docker container on EC2
         run: |
-          docker run -d -p 4500:4500 --env EC2_PUBLIC_IP=18.188.226.16 omer07/dockerhub07:1
+          docker run -p 4500:4500 --env EC2_PUBLIC_IP=18.188.226.16 omer07/dockerhub07:1
