--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,4 +63,13 @@ jobs:
 
       - name: Log in to Docker Hub on EC2
         run: |
-          docker login -
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Pull Docker image on EC2
+        run: |
+          docker pull your-dockerhub-omer07/dockerhub07:latest
+
+      - name: Run Docker container on EC2
+        run: |
+          docker run -d -p 4500:4500 your-dockerhub-omer07/dockerhub07:latest
+
