--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,9 +67,8 @@ jobs:
 
       - name: Pull Docker image on EC2
         run: |
-          docker pull omer07/dockerhub07:1
+          docker pull your-dockerhub-omer07/dockerhub07:latest  # Use the correct image tag
 
       - name: Run Docker container on EC2
         run: |
-          docker run -d -p 4500:4500 your-dockerhub-omer07/dockerhub07:l
-
+          docker run -d -p 4500:4500 your-dockerhub-omer07/dockerhub07:latest  # Use the correct image tag
