--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,11 +70,11 @@ jobs:
 
       - name: Pull Docker image on EC2
         run: |
-          docker pull your-dockerhub-omer07/dockerhub07:latest || exit 0  # Use the correct image tag
+          docker pull your-dockerhub-omer07/dockerhub07:1 || exit 0  # Use the correct image tag
 
       - name: Debug Docker image
         run: docker images
 
       - name: Run Docker container on EC2
         run: |
-          docker run -d -p 4500:4500 your-dockerhub-omer07/dockerhub07:latest || exit 0  # Use the correct image tag
+          docker run -d -p 4500:4500 your-dockerhub-omer07/dockerhub07:1 || exit 0  # Use the correct image tag
