--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ image: docker:latest
 variables:
   REPOSITORY_URL: $AWS_ACCOUNT_ID.dkr.ecr.us-east-2.amazonaws.com
   REGION: us-east-2
-  DOCKER_HOST: tcp://docker:2375
+  DOCKER_HOST: tcp://docker:7500
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
   IMAGE_TAG: $CI_PIPELINE_IID
@@ -33,20 +33,18 @@ build:
     - docker push $REPOSITORY_URL/$ECR_REPO:$IMAGE_TAG
   only:
     - main
-
-deploy:  
+deploy:
   stage: deploy
   before_script:
     - mkdir -p ~/.ssh
-    - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+    - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa 
     - chmod 600 ~/.ssh/id_rsa
     - apk add openssh # Install ssh 
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa
-  
+
      script:
     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker stop virat-kholi || true && docker rm virat-kholi || true"
     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "aws ecr get-login-password --region ${REGION} | docker login --username AWS --password-stdin $REPOSITORY_URL"
     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker pull $REPOSITORY_URL/$ECR_REPO:latest"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker run -d -p 7500:7500 --name virat-kholi $REPOSITORY_URL/$ECR_REPO:latest"
-
+    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker run -d -p 7500:7500 --name virat-kholi $REPOSITORY_URL/$ECR_REPO"
