--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,50 +1,71 @@
-image: docker:latest
+name: Build and Push Docker Image
 
- variables:
-  REPOSITORY_URL: $AWS_ACCOUNT_ID.dkr.ecr.us-east-2.amazonaws.com
-  REGION: us-east-2
-  DOCKER_HOST: tcp://docker:7500
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
-  IMAGE_TAG: $CI_PIPELINE_IID
-  VIRTUAL_ENV: "/path/to/venv"
+on:
+  push:
+    branches:
+      - main
 
- services:
-  - docker:dind
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
- before_script:
-  - apk add nodejs npm
-  - npm install -g aws-cli
-  - aws ecr get-login-password --region "${REGION}" | docker login --username AWS --password-stdin "${ECR_REGISTRY}"
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
- stages:
-  - build
-  - deploy
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
- build:
- stage: build
- script:
-    - echo "Building image..."
-    - docker build -t $REPOSITORY_URL/$ECR_REPO:latest .
-    - echo "Tagging image..."
-    - docker tag $REPOSITORY_URL/$ECR_REPO:latest $REPOSITORY_URL/$ECR_REPO:$IMAGE_TAG
-    - echo "Pushing image..."
-    - docker push $REPOSITORY_URL/$ECR_REPO:latest
-    - docker push $REPOSITORY_URL/$ECR_REPO:$IMAGE_TAG
- only:
-    - main
+      - name: Install dependencies
+        run: npm install
 
- deploy:
-  stage: deploy
-  before_script:
-    - mkdir -p ~/.ssh
-    - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa 
-    - chmod 600 ~/.ssh/id_rsa
-    - apk add openssh # Install ssh 
-    - eval $(ssh-agent -s)
-    - ssh-add ~/.ssh/id_rsa
-  script: 
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker stop virat-kholi || true && docker rm virat-kholi || true"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "aws ecr get-login-password --region ${REGION} | docker login --username AWS --password-stdin $REPOSITORY_URL"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker pull $REPOSITORY_URL/$ECR_REPO:latest"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$EC2_INSTANCE_IP "docker run -d -p 7500:7500 --name virat-kholi $REPOSITORY_URL/$ECR_REPO"
+      - name: Build Docker image
+        run: docker build -t your-dockerhub-omer07/dockerhub:latest .
+
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push to Docker Hub
+        run: |
+          docker push your-dockerhub-omer07/dockerhub07:latest || exit 0
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Update and upgrade packages on EC2
+        run: |
+          sudo apt-get update
+          sudo apt-get upgrade -y
+      - name: Remove conflicting Docker packages (if any)
+        run: |
+          sudo apt-get remove docker docker-engine docker.io containerd runc
+      - name: Install Docker dependencies
+        run: |
+          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+      - name: Add Docker GPG key
+        run: |
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+      - name: Set up stable Docker repository
+        run: |
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      - name: Install Docker on EC2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+      - name: Log in to Docker Hub on EC2
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Debug Docker
+        run: docker info
+
+      - name: Pull Docker image on EC2
+        run: |
+          docker pull your-dockerhub-omer07/dockerhub:1 || exit 0  # Use the correct image tag
+      - name: Debug Docker image
+        run: docker images
+
+      - name: Run Docker container on EC2
+        run: |
+          docker run -d -p 6500:6500 your-dockerhub-omer07/dockerhub:1 || exit 0  # Use the correct image tag
