--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
         
   deploy:
     needs: build
-    runs-on: [omer-insatance]
+    runs-on: [aws-ec2]
     steps:
       - name: Pull image from docker hub
         run: docker pull integrationninjas/nodejs-app:latest
