--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,17 +11,17 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
-        run: docker build -t omer07/dockerhub .
+        run: docker build -t omer07/devopshub .
       - name: Publish image to docker hub
-        run: docker push omer07/dockerhub:latest
+        run: docker push omer07/devopshub:latest
         
   deploy:
     needs: build
     runs-on: [aws-ec2]
     steps:
       - name: Pull image from docker hub
-        run: docker pull omer07/dockerhub:latest
+        run: docker pull omer07/devopshub:latest
       - name: Delete old container
-        run: docker rm -f dockerhub-container
+        run: docker rm -f devopshub-container
       - name: Run docker container
-        run: docker run -d -p 7500:7500 --name dockerhub-container omer07/dockerhub
+        run: docker run -d -p 7500:7500 --name devopshub-container omer07/devopshub
